# nanodet

./: .gitignore  demo.sh  requirements.txt
2ncnn/: 2ncnn.py  2ncnn.sh  2ncnn_pnnx.py  2ncnn_pnnx.sh
2ncnn/verify/: CMakeLists.txt  main.cpp
2ncnn/verify/quantize/: quantize.sh
nanodet/model/head/: nanodet_plus_head.py
ncnn/: 2ncnn.py  2ncnn_pnnx.sh
ncnn/script/: 2ncnn.sh
ncnn/verify/: CMakeLists.txt
